--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,10 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_DATABASE=kunzisoft
+DB_USERNAME=root
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
